crates/lattice-store-mongodb/tests/ui/document_set_untracked.stderr
error: MongoDocumentSet fields must have type Tracked<T> or use #[mongo(skip)]
 --> tests/ui/document_set_untracked.rs:6:12
  |
6 |     value: String,
  |            ^^^^^^
